--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
+   "dev": "webpack-dev-server --mode development",
+
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "html-webpack-plugin": "^4.2.0",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
